@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1-82
-Date: 2011-03-08
+Date: 2011-03-09
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
