@@ -15,10 +15,14 @@
     values yield more extensive debugging.}
 }
 
-\details{The coordinate transformation is done using the matrix
-  contained within the header.  To indicate the change, the value of
-  \code{metadata$oce.orientation} is changed from \code{beam} to
-  \code{xyz}.}
+\details{The coordinate transformation is done using the transformation matrix
+    contained in \code{x$metadata$transformation.matrix}, which is normally
+    inferred from the header in the binary file.  If there is no such matrix
+    (e.g. if the data were streamed through a data logger that did not capture
+    the header), \code{adv.beam2xyz} the user will need to store one in
+    \code{x}, e.g. by doing something like the following:
+    \code{x$metadata$transformation.matrix <- rbind(c(11100, -5771,  -5321), c(
+        291,  9716, -10002), c( 1409,  1409,   1409)) / 4096} .}
 
 \seealso{See \code{\link{read.adv}} for notes on functions relating to
   \code{"adv"} objects.}
